Some changes were made:       1. Dependencies were simplified       2. Prority of nodes was removed       3. Tosca parser isn't used as objects during program progress       4. Some common maps were taken out in separate file       5. At the beginning all definitions are fulfilled with parents parameters       6. Host is taken be type HostedOn       7. Relationship resource has target and source now       8. Defaults are set in propeties
    Closes: #29

--- a/examples/tosca-server-example-openstack.yaml
+++ b/examples/tosca-server-example-openstack.yaml
@@ -11,6 +11,7 @@ topology_template:
         floating_ip_address: 10.100.115.15
       requirements:
         - network:
+            relationship: server_kube_master_server_name
             node_filter:
               properties:
                 - name:
@@ -39,7 +40,10 @@ topology_template:
       properties:
         direction: ingress
         port_range_max: 1000
-        port_range_min: 1000
+        port_range_min:
+          get_property:
+            - SELF
+            - port_range_max
         protocol: tcp
         remote_ip_prefix: 0.0.0.0
       requirements:
