--- a/toscatranslator/clouni.cfg
+++ b/toscatranslator/clouni.cfg
@@ -1,3 +1,4 @@
 [main]
-tosca_definition_file = toscatranslator/common/TOSCA_definition_1_0.yaml,toscatranslator/providers/common/TOSCA_provider_definition_1_0.yaml
+tosca_elements_definition_file = toscatranslator/common/TOSCA_definition_1_0.yaml,toscatranslator/providers/common/TOSCA_provider_definition_1_0.yaml
 default_artifacts_directory = artifacts
+tosca_elements_map_file = toscatranslator/common/tosca_elements_map_common.yaml
