--- a/toscatranslator/common/TOSCA_definition_1_0.yaml
+++ b/toscatranslator/common/TOSCA_definition_1_0.yaml
@@ -243,7 +243,7 @@ node_types:
     description: >
       The TOSCA WebApplication node represents a software application that can be managed and run by a TOSCA
       WebServer node.
-    derived_from: tosca.nodes.Root
+    derived_from: tosca.nodes.SoftwareComponent
     properties:
       context_root:
         type: string
@@ -493,10 +493,6 @@ node_types:
         default: true
         description: >
           Indicates should DHCP service be enabled on the network or not.
-    attributes:
-      segmentation_id:
-        type: string
-        required: false
     capabilities:
       link:
         type: tosca.capabilities.network.Linkable
@@ -541,10 +537,6 @@ node_types:
         description: >
           Defines the ending IP of a range to be allocated for the compute
           instances that are associated with this Port.
-    attributes:
-      ip_address:
-        type: string
-        required: false
     requirements:
       - binding:
           description: >
@@ -621,10 +613,6 @@ relationship_types:
       device:
         required: false
         type: string
-    attributes:
-      device:
-        type: string
-        required: false
 
   tosca.relationships.RoutesTo:
     description: This type represents an intentional network routing between two Endpoints in different networks.
