--- a/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
+++ b/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
@@ -297,12 +297,12 @@ node_types:
       - network: # network_id in facts
           capability: openstack.capabilities.Node
           node: openstack.nodes.Network
-          relationships: openstack.relationships.DependsOn
+          relationship: openstack.relationships.DependsOn
           occurrences: [1, 1]
       - security_groups:
           capability: openstack.capabilities.Container
           node: openstack.nodes.SecurityGroup
-          relationships: openstack.relationships.DependsOn
+          relationship: openstack.relationships.DependsOn
           occurrences: [0, UNBOUNDED]
 
   openstack.nodes.Router: # os_router
@@ -332,12 +332,12 @@ node_types:
       - network: # external gateway network
           capability: openstack.capabilities.Node
           node: openstack.nodes.Network
-          relationships: openstack.relationships.DependsOn
+          relationship: openstack.relationships.DependsOn
           occurrences: [ 1, 1 ]
       - interfaces:
           capability: openstack.capabilities.Node
           node: openstack.nodes.Subnet
-          relationships: openstack.relationships.DependsOn
+          relationship: openstack.relationships.DependsOn
           occurrences: [ 0, UNBOUNDED ]
 
   openstack.nodes.SecurityGroup: # os_security_group
