--- a/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
+++ b/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
@@ -581,7 +581,7 @@ node_types:
         type: string
         required: false
       size:
-        type: scalar-unit.size
+        type: integer # scalar-unit.size
         required: false
       volume_type:
         type: string
