--- a/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
+++ b/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
@@ -341,7 +341,7 @@ tosca.nodes.Compute:
 #      value:
 #        - parameter: volumes
 #          value: "{self[value]}_volume"
-  - requirements.local_storage.node.local_storage:
+  - requirements.local_storage.node:
       parameter: openstack.nodes.Server.requirements.volumes
       value: "{self[value]}_volume"
 
